--- a/src/components/BookList.css
+++ b/src/components/BookList.css
@@ -28,11 +28,6 @@
 	/* margin: 5px 50px; */
 }
 
-.featured-card {
-	background: red;
-	margin: 10px 20px;
-}
-
 .featured-card .thumbnail {
 	grid-area:thumbnail
 }
@@ -65,6 +60,8 @@
 	padding: 10px;
 	justify-items: center;
 	text-align: center;
+	background: red;
+	margin: 10px 20px;
 }
 
 .book-cards .thumbnail {
@@ -137,6 +134,25 @@
 
 	.book-cards div {
 		margin:5px;
+	}
+
+	.featured-container{
+		margin: 5px;
+		width: 250px;
+	}
+
+	.featured-card div{
+		grid-template-areas: 
+		"title"
+		"author"
+		"pages"
+		"description"
+		"thumbnail";
+	}
+
+	p {
+		margin:5px;
+		font-size:15px;
 	}
 }
  
