--- a/src/components/BookList.css
+++ b/src/components/BookList.css
@@ -1,319 +1,322 @@
 .container h1,
 .featured-container h2 {
-	text-align: center;
+  text-align: center;
 }
 
 /* Global style  */
 
 p {
-	margin: 5px;
-	font-size: 12px;
+  margin: 5px;
+  font-size: 12px;
 }
 
 /* Container layout */
 
 .header {
-	grid-area: header;
-	margin-bottom: 0px;
+  grid-area: header;
+  margin-bottom: 0px;
 }
 
 .header img {
-	display: none;
+  display: none;
 }
 
 .info {
-	grid-area: info;
-	padding: 0px 10px;
+  grid-area: info;
+  padding: 0px 10px;
 }
 
 .books-container {
-	grid-area: books;
+  grid-area: books;
 }
 
 .featured-container {
-	grid-area: featured;
-	background: #63adf2;
+  grid-area: featured;
+  background: #63adf2;
 }
 
 .container {
-	display: grid;
-	grid-template-columns: auto;
-	grid-template-rows: auto;
-	grid-template-areas:
-		'header'
-		'menu'
-		'info'
-		'featured'
-		'books'
-		'footer';
-	grid-gap: 10px;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "header"
+    "menu"
+    "info"
+    "featured"
+    "books"
+    "footer";
+  grid-gap: 10px;
 }
 
 /* Featured books */
 
 .featured-card .thumbnail {
-	grid-area: thumbnail;
+  grid-area: thumbnail;
 }
 
 .featured-card .title {
-	grid-area: title;
+  grid-area: title;
 }
 
 .featured-card .author {
-	grid-area: author;
+  grid-area: author;
 }
 
 .featured-card .pages {
-	grid-area: pages;
+  grid-area: pages;
 }
 
 .featured-card .description {
-	grid-area: description;
+  grid-area: description;
 }
 
 .featured-card div {
-	display: grid;
-	grid-template-columns: auto;
-	grid-template-rows: auto;
-	grid-template-areas:
-		'thumbnail'
-		'title'
-		'author'
-		'pages'
-		'description';
-	padding: 10px;
-	justify-items: center;
-	text-align: center;
-	background: #a7cced;
-	margin: 10px 20px;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "thumbnail"
+    "title"
+    "author"
+    "pages"
+    "description";
+  padding: 10px;
+  justify-items: center;
+  text-align: center;
+  background: #a7cced;
+  margin: 10px 20px;
 }
 
 /* Books */
 
 .book-cards .thumbnail {
-	grid-area: thumbnail;
+  grid-area: thumbnail;
 }
 
 .book-cards .title {
-	grid-area: title;
+  grid-area: title;
 }
 
 .book-cards .author {
-	grid-area: author;
+  grid-area: author;
 }
 
 .book-cards .pages {
-	grid-area: pages;
+  grid-area: pages;
 }
 
 .book-cards .description {
-	grid-area: description;
+  grid-area: description;
 }
 
 .book-cards div {
-	display: grid;
-	grid-template-columns: auto;
-	grid-template-rows: auto;
-	grid-template-areas:
-		'thumbnail title '
-		'thumbnail author '
-		'thumbnail pages '
-		'thumbnail description';
-	margin: 10px 0px;
-	padding: 10px;
-	justify-items: start;
-	background: #a7cced;
+  display: grid;
+  grid-template-columns: 140px auto;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "thumbnail title "
+    "thumbnail author "
+    "thumbnail pages "
+    "thumbnail description";
+  margin: 10px 0px;
+  padding: 10px;
+  justify-items: start;
+  background: #a7cced;
 }
 
-.book-cards .is-selected, .featured-card .is-selected {
-	background: #545e75;
+.book-cards .is-selected,
+.featured-card .is-selected {
+  background: #545e75;
 }
 
 /* Navigation */
 
 .navigation {
-	grid-area: menu;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+  grid-area: menu;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .navigation ul {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	overflow: hidden;
-	background-color: #fff;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow: hidden;
+  background-color: #fff;
 }
 
 .navigation ul li {
-	text-align: center;
+  text-align: center;
 }
 
 .navigation li a {
-	display: block;
-	padding: 20px 20px;
-	text-decoration: none;
-	color: black;
+  display: block;
+  padding: 20px 20px;
+  text-decoration: none;
+  color: black;
 }
 
 .navigation li a:hover,
 .navigation .menu-btn:hover {
-	background-color: #a7cced;
+  background-color: #a7cced;
 }
 
 /* menu */
 
 .navigation .menu {
-	width: 100%;
-	max-height: 0;
-	transition: max-height 0.3s ease-out;
+  width: 100%;
+  max-height: 0;
+  transition: max-height 0.3s ease-out;
 }
 
 /* hamburger */
 
 .navigation .menu-icon {
-	cursor: pointer;
-	padding: 10px 20px;
-	position: relative;
-	user-select: none;
+  cursor: pointer;
+  padding: 10px 20px;
+  position: relative;
+  user-select: none;
 }
 
 .navigation .menu-icon .navicon {
-	background: #333;
-	display: block;
-	height: 2px;
-	position: relative;
-	transition: background 0.3s ease-out;
-	width: 18px;
+  background: #333;
+  display: block;
+  height: 2px;
+  position: relative;
+  transition: background 0.3s ease-out;
+  width: 18px;
 }
 
 .navigation .menu-icon .navicon:before,
 .navigation .menu-icon .navicon:after {
-	background: #333;
-	content: '';
-	display: block;
-	height: 100%;
-	position: absolute;
-	transition: all 0.3s ease-out;
-	width: 100%;
+  background: #333;
+  content: "";
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all 0.3s ease-out;
+  width: 100%;
 }
 
 .navigation .menu-icon .navicon:before {
-	top: 5px;
+  top: 5px;
 }
 
 .navigation .menu-icon .navicon:after {
-	top: -5px;
+  top: -5px;
 }
 
 /* hamburger btn */
 
 .navigation .menu-btn {
-	display: none;
+  display: none;
 }
 
-.navigation .menu-btn:checked~.menu {
-	max-height: 240px;
+.navigation .menu-btn:checked ~ .menu {
+  max-height: 240px;
 }
 
-.navigation .menu-btn:checked~.menu-icon .navicon {
-	background: transparent;
+.navigation .menu-btn:checked ~ .menu-icon .navicon {
+  background: transparent;
 }
 
-.navigation .menu-btn:checked~.menu-icon .navicon:before {
-	transform: rotate(-45deg);
+.navigation .menu-btn:checked ~ .menu-icon .navicon:before {
+  transform: rotate(-45deg);
 }
 
-.navigation .menu-btn:checked~.menu-icon .navicon:after {
-	transform: rotate(45deg);
+.navigation .menu-btn:checked ~ .menu-icon .navicon:after {
+  transform: rotate(45deg);
 }
 
-.navigation .menu-btn:checked~.menu-icon:not(.steps) .navicon:before,
-.navigation .menu-btn:checked~.menu-icon:not(.steps) .navicon:after {
-	top: 0;
+.navigation .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.navigation .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+  top: 0;
 }
 
 /* M E D I A  Q U E R I E S */
 
 /* Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) {}
+@media (min-width: 576px) {
+}
 
 /* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
-@media (min-width: 768px) {}
+@media (min-width: 768px) {
+}
 
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
-	.header img {
-		display: inline;
-	}
+  .header img {
+    display: inline;
+  }
 
-	.menu {
-		display: flex;
-	}
+  .menu {
+    display: flex;
+  }
 
-	/* Container layout */
+  /* Container layout */
 
-	.container {
-		grid-template-areas:
-			'header header header'
-			'menu menu menu'
-			'info info info'
-			'books books featured'
-			'footer footer footer';
-	}
+  .container {
+    grid-template-areas:
+      "header header header"
+      "menu menu menu"
+      "info info info"
+      "books books featured"
+      "footer footer footer";
+  }
 
-	/* Books */
+  /* Books */
 
-	.book-cards {
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-		grid-auto-rows: auto;
-	}
+  .book-cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: auto;
+  }
 
-	.book-cards div {
-		margin: 5px;
-	}
+  .book-cards div {
+    margin: 5px;
+  }
 
-	/* Featured books  */
+  /* Featured books  */
 
-	.featured-container {
-		margin: 5px;
-		width: 250px;
-	}
+  .featured-container {
+    margin: 5px;
+    width: 250px;
+  }
 
-	.featured-card div {
-		grid-template-areas:
-			'title'
-			'author'
-			'pages'
-			'description'
-			'thumbnail';
-	}
+  .featured-card div {
+    grid-template-areas:
+      "title"
+      "author"
+      "pages"
+      "description"
+      "thumbnail";
+  }
 
-	/* Global style  */
-	p {
-		margin: 5px;
-		font-size: 15px;
-	}
+  /* Global style  */
+  p {
+    margin: 5px;
+    font-size: 15px;
+  }
 
-	/* Navigation */
+  /* Navigation */
 
-	.navigation ul li {
-		width: auto;
-	}
+  .navigation ul li {
+    width: auto;
+  }
 
-	.navigation li a {
-		padding: 20px 30px;
-	}
+  .navigation li a {
+    padding: 20px 30px;
+  }
 
-	.navigation .menu {
-		flex-direction: row;
-		justify-content: center;
-		max-height: none;
-	}
+  .navigation .menu {
+    flex-direction: row;
+    justify-content: center;
+    max-height: none;
+  }
 
-	.navigation .menu-icon {
-		display: none;
-	}
+  .navigation .menu-icon {
+    display: none;
+  }
 }
